2019-02-06  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/i386/lowlevellock.h: Do not include
	<stap-probe.h>.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Likewise.

2019-02-06  Stefan Liebler  <stli@linux.ibm.com>

	* libio/tst-bz24153.c (wide): Use wide char format specifier.

2019-02-06  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/s390/wmemcmp-vx.S: Add strong alias to
	__wmemcmp and weak alias to wmemcmp.

2019-02-06  Stefan Liebler  <stli@linux.ibm.com>

	[BZ #23403]
	* nptl/allocatestack.c (allocate_stack): Align pointer pd for
	TLS_TCB_AT_TP tls variant.
	* nptl/tst-tls1.c: Migrate to support/test-driver.c.
	Add alignment checks.
	* support/Makefile (libsupport-routines): Add xposix_memalign and
	xpthread_setstack.
	* support/support.h: Add xposix_memalign.
	* support/xthread.h: Add xpthread_attr_setstack.
	* support/xposix_memalign.c: New File.
	* support/xpthread_attr_setstack.c: Likewise.

2019-02-05  Florian Weimer  <fweimer@redhat.com>

	[BZ #24164]
	arm: Use "nr" constraint for Systemtap probes, to avoid the
	compiler using memory operands for constants, due to the "o"
	alternative in the default "nor" constraint.
	* include/stap-probe.h [USE_STAP_PROBE]: Include
	<stap-probe-machine.h>
	* sysdeps/generic/stap-probe-machine.h: New file.
	* sysdeps/arm/stap-probe-machine.h: Likewise.

2019-02-04  Joseph Myers  <joseph@codesourcery.com>

	* malloc/malloc.c (tcache_get): Compare tcache->counts[tc_idx]
	with 0, not tcache->entries[tc_idx].

	* nscd/connections.c (reqinfo): Initialize SHUTDOWN element only
	once.

2019-02-04  Andreas Schwab  <schwab@suse.de>

	[BZ #16976]
	[BZ #17396]
	* posix/fnmatch_loop.c (internal_fnmatch, internal_fnwmatch): When
	looking up collating elements match against (wide) character
	sequence instead of name.  Correct alignment adjustment.
	* posix/fnmatch.c: Don't include "../locale/elem-hash.h".
	(WMEMCMP) [HANDLE_MULTIBYTE]: Define.
	* posix/Makefile (tests): Add tst-fnmatch4 and tst-fnmatch5.